--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "author": "Harshit Pathak",
   "license": "MIT",
   "scripts": {
-    "tslint": "" ,
+    "tslint": "",
     "build": "yarn tslint && tsc",
-    "test": "yarn build && yarn test"
+    "test": "mocha --require isomorphic-fetch --reporter spec --compilers ts:ts-node/register \"test/**/*.test.ts\""
   },
   "publishConfig": {
-    "registry": "https://msasg.pkgs.visualstudio.com/_packaging/ARIA-SDK/npm/registry"
+    "registry": "https://smbengineering.pkgs.visualstudio.com/_packaging/smbtelephony/npm/registry/"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,16 @@
     "retry",
     "react-native",
     "strategy"
-  ]
+  ],
+  "devDependencies": {
+    "@types/chai": "^4.1.2",
+    "@types/mocha": "^2.2.48",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.1",
+    "ts-node": "^4.1.0",
+    "typescript": "^2.7.1"
+  },
+  "dependencies": {
+    "isomorphic-fetch": "^2.2.1"
+  }
 }
