--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-registry=https://smbengineering.pkgs.visualstudio.com/_packaging/smb/npm/registry/
+@smb:registry=https://smbengineering.pkgs.visualstudio.com/_packaging/smb/npm/registry/
 always-auth=true
