--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
     "compilerOptions": {
-      "module": "commonjs",
-      "target": "es6",
-      "declaration": true,
-      "outDir": "./dist"
+        "module": "commonjs",
+        "target": "es6",
+        "declaration": true,
+        "outDir": "./dist"
     },
-    "include": [
-      "src/**/*"
-    ]
-  }
+    "include": ["src/**/*"]
+}
